# dsml

./: CMakeLists.txt  README.md
demo/: config.tsv  debug_video.cpp  demo.cpp  demo2.cpp  process.cpp  video.cpp
include/: dsml.hpp
src/: dsml.cpp
test/: config.tsv  test.cpp
